fixing drawer menu layout problem

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -5,6 +5,7 @@
 }
 
 .navbar__item {
+  margin: 4rem;
   color: #fff;
   text-decoration: none;
 }
